--- a/css/css-rule.css
+++ b/css/css-rule.css
@@ -14,9 +14,10 @@ h2 {
 }
 
 div {
-    color: yellow;
+    background-color: yellow;
+    width: 50%;
 }
 
 span {
-    color: black;
+    background-color: green;
 }
