update css demo

--- a/css/survey.css
+++ b/css/survey.css
@@ -1,14 +1,13 @@
 /*@import url(https://fonts.googleapis.com/css?family=Raleway:400,500);*/
-
 html,
 .survey-page {
   background-color: #a9d7d1;
   text-align: center;
   font-family: 'Raleway', Helvetica, sans-serif;
   min-width: 320px;
-}
+} 
 
-#form-outer {
+#form-container {
   background-color: rgb(250, 250, 250);
   margin: 0 auto;
   border-radius: 4px;
@@ -18,7 +17,7 @@ html,
   padding-top: 20px;
 }
 
-.labels {
+.label-cls {
   display: inline-block;
   text-align: right;
   width: 40%;
@@ -27,7 +26,7 @@ html,
   margin-top: 10px;
 }
 
-.rightTab {
+.input-col {
   display: inline-block;
   text-align: left;
   width: 48%;
@@ -43,16 +42,35 @@ html,
   border-radius: 2px;
 }
 
-#userAge {
-  width: 40px;
-}
 
 .userRatings,
 input[type="checkbox"] {
-  float: left;
   margin-right: 5px;
 }
 
+.dropdown {
+  height: 35px;
+  width: 180px;
+  padding: 5px;
+  margin: 10px;  
+  margin-top: 15px;
+  border: 1px solid #c0c0c0;
+  border-radius: 2px;
+}
+
+.input-col ul {
+  padding-left: 0px;
+}
+
+.radio, .checkbox {
+  margin-left: 10px;
+  display: block;
+  padding-bottom: 10px;
+}
+#comments {
+  height:50px;
+  resize:vertical;
+}
 #submit {
   background-color: #59ace0;
   border-radius: 4px;
@@ -64,23 +82,6 @@ input[type="checkbox"] {
   border: 0px solid;
 }
 
-.dropdown {
-  height: 35px;
-  width: 140px;
-  padding: 5px;
-  margin: 10px;  
-  margin-top: 15px;
-  border: 1px solid #c0c0c0;
-  border-radius: 2px;
-}
-
-.radio, .checkbox {
-  position: relative;
-  left: -43px;
-  margin-left: 10px;
-  display: block;
-  padding-bottom: 10px;
-}
 
 @media screen and (max-width: 833px) {
   .input-field {
@@ -92,11 +93,11 @@ input[type="checkbox"] {
 }
 
 @media screen and (max-width: 520px) {
-  .labels {
+  .label-cls {
     width: 100%;
     text-align: left;
   }
-  .rightTab {
+  .input-col {
     width: 80%;
     float: left;
   }
